--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "ngToast": "ngtoast#^2.0.0",
     "angular-animate": "^1.6.1",
     "font-awesome": "fontawesome#^4.7.0",
-    "oi.select": "^0.2.21"
+    "oi.select": "^0.2.21",
+    "angular-mailto": "^0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
