--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-ng-constant": "^2.0.1",
     "grunt-postcss": "^0.8.0",
     "grunt-svgmin": "^4.0.0",
+    "grunt-template": "^1.0.0",
     "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^3.0.1",
     "jit-grunt": "^0.10.0",
@@ -44,6 +45,7 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "mocha": "^3.2.0",
     "phantomjs": "^2.1.7",
+    "serve-static": "^1.11.2",
     "time-grunt": "^1.4.0"
   },
   "engines": {
