--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-ng-annotate": "^3.0.0",
     "grunt-ng-constant": "^2.0.1",
     "grunt-postcss": "^0.8.0",
+    "grunt-string-replace": "^1.3.1",
     "grunt-svgmin": "^4.0.0",
     "grunt-template": "^1.0.0",
     "grunt-usemin": "^3.1.1",
