--- a/bower.json
+++ b/bower.json
@@ -38,8 +38,7 @@
     "font-awesome": "fontawesome#^4.7.0",
     "oi.select": "^0.2.21",
     "angular-mailto": "^0.1.0",
-    "angular-color-picker": "^1.0.10",
-    "ng-scrollbars": "^0.0.11"
+    "angular-color-picker": "^1.0.10"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -103,6 +102,11 @@
     "jquery.nicescroll": {
       "main": [
         "jquery.nicescroll.js"
+      ]
+    },
+    "ng-scrollbars": {
+      "main": [
+        "src/scrollbars.js"
       ]
     }
   }
