--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,8 @@
     "font-awesome": "fontawesome#^4.7.0",
     "oi.select": "^0.2.21",
     "angular-mailto": "^0.1.0",
-    "angular-color-picker": "^1.0.10"
+    "angular-color-picker": "^1.0.10",
+    "angular-daterangepicker": "^0.2.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
