--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "ng-dialog": "~0.6.0",
     "checklist-model": "~0.9.0",
     "angular-base64-upload": "~0.1.19",
-    "angular-prompt": "~1.1.1",
+    "angular-prompt": "^1.2.0",
     "awesome-bootstrap-checkbox": "~0.3.7",
     "lodash": "~4.13.1",
     "ui-listView": "~0.0.8",
