--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "oi.select": "^0.2.21",
     "angular-mailto": "^0.1.0",
     "angular-color-picker": "^1.0.10",
-    "angular-daterangepicker": "^0.2.2"
+    "angular-daterangepicker": "^0.2.2",
+    "angularPrint": "angular-print#^0.3.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
