--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,10 @@
     "angular-mailto": "^0.1.0",
     "angular-color-picker": "^1.0.10",
     "angular-daterangepicker": "^0.2.2",
-    "angularPrint": "angular-print#^0.3.8"
+    "angularPrint": "angular-print#^0.3.8",
+    "angular-echarts": "^1.0.2",
+    "ng-chartjs": "^0.0.5",
+    "echarts": "^3.6.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -103,6 +106,16 @@
     "ng-scrollbars": {
       "main": [
         "src/scrollbars.js"
+      ]
+    },
+    "angular-echarts": {
+      "main": [
+        "dist/angular-echarts.js"
+      ]
+    },
+    "echarts": {
+      "main": [
+        "dist/echarts.js"
       ]
     }
   }
