--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,9 @@
     "angularPrint": "angular-print#^0.3.8",
     "angular-echarts": "^1.0.2",
     "ng-chartjs": "^0.0.5",
-    "echarts": "^3.6.1"
+    "echarts": "^3.6.1",
+    "angular-socket-io": "^0.7.0",
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -116,6 +118,11 @@
     "echarts": {
       "main": [
         "dist/echarts.js"
+      ]
+    },
+    "socket.io-client": {
+      "main": [
+        "dist/socket.io.js"
       ]
     }
   }
