--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -1,19 +1,20 @@
 {
-    "bitwise": true,
-    "browser": true,
-    "curly": true,
-    "eqeqeq": true,
-    "esnext": true,
-    "jasmine": true,
-    "latedef": true,
-    "noarg": true,
-    "node": true,
-    "strict": true,
-    "undef": true,
-    "unused": true,
-    "globals": {
-        "angular": false,
-        "inject": false,
-        "_": false
-    }
+  "bitwise": true,
+  "browser": true,
+  "curly": true,
+  "eqeqeq": true,
+  "esnext": true,
+  "jasmine": true,
+  "latedef": true,
+  "noarg": true,
+  "node": true,
+  "strict": true,
+  "undef": true,
+  "unused": true,
+  "globals": {
+    "angular": false,
+    "inject": false,
+    "_": false,
+    "io": false
+  }
 }
