--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,8 @@
     "ng-chartjs": "^0.0.5",
     "echarts": "^3.6.1",
     "angular-socket-io": "^0.7.0",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "ng-focus-if": "^1.0.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
