--- a/bower.json
+++ b/bower.json
@@ -40,7 +40,8 @@
     "echarts": "^3.6.1",
     "angular-socket-io": "^0.7.0",
     "socket.io-client": "^2.0.3",
-    "ng-focus-if": "^1.0.7"
+    "ng-focus-if": "^1.0.7",
+    "ngInfiniteScroll": "^1.3.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
