--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "open311-web",
   "version": "0.1.0",
-  "dependencies": {
+  "dependencies":
+  {
     "angular": "^1.6.1",
     "angular-bootstrap": "^2.4.0",
     "angular-loading-bar": "~0.8.0",
@@ -41,88 +42,106 @@
     "angular-socket-io": "^0.7.0",
     "socket.io-client": "^2.0.3",
     "ng-focus-if": "^1.0.7",
-    "ngInfiniteScroll": "^1.3.4"
+    "ngInfiniteScroll": "^1.3.4",
+    "moment": "^2.18.1"
   },
-  "devDependencies": {
+  "devDependencies":
+  {
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
   "moduleName": "open311-web",
-  "overrides": {
-    "bootstrap": {
+  "overrides":
+  {
+    "bootstrap":
+    {
       "main": [
         "dist/css/bootstrap.css"
       ]
     },
-    "angular-bootstrap": {
+    "angular-bootstrap":
+    {
       "main": [
         "ui-bootstrap.js",
         "ui-bootstrap-tpls.js"
       ]
     },
-    "open-iconic": {
+    "open-iconic":
+    {
       "main": [
         "font/css/open-iconic-bootstrap.css"
       ]
     },
-    "font-awesome": {
+    "font-awesome":
+    {
       "main": [
         "css/font-awesome.css"
       ]
     },
-    "angular-morris-chart": {
+    "angular-morris-chart":
+    {
       "main": [
         "src/angular-morris-chart.js"
       ]
     },
-    "morris.js": {
+    "morris.js":
+    {
       "main": [
         "morris.js",
         "morris.css"
       ],
-      "dependencies": {
+      "dependencies":
+      {
         "jquery": ">= 2.1.0",
         "raphael": ">= 2.0"
       }
     },
-    "angular-theme-spinner": {
+    "angular-theme-spinner":
+    {
       "main": [
         "dist/angular-theme-spinner.js",
         "dist/angular-theme-spinner.min.css"
       ]
     },
-    "ng-csv": {
+    "ng-csv":
+    {
       "main": [
         "build/ng-csv.js"
       ]
     },
-    "ui-listView": {
+    "ui-listView":
+    {
       "main": [
         "dist/ui-listView.js",
         "dist/ui-listView.css"
       ]
     },
-    "jquery.nicescroll": {
+    "jquery.nicescroll":
+    {
       "main": [
         "jquery.nicescroll.js"
       ]
     },
-    "ng-scrollbars": {
+    "ng-scrollbars":
+    {
       "main": [
         "src/scrollbars.js"
       ]
     },
-    "angular-echarts": {
+    "angular-echarts":
+    {
       "main": [
         "dist/angular-echarts.js"
       ]
     },
-    "echarts": {
+    "echarts":
+    {
       "main": [
         "dist/echarts.js"
       ]
     },
-    "socket.io-client": {
+    "socket.io-client":
+    {
       "main": [
         "dist/socket.io.js"
       ]
