fix echart dependency loading

--- a/bower.json
+++ b/bower.json
@@ -120,6 +120,12 @@
       "main": [
         "dist/socket.io.js"
       ]
+    },
+    "echarts":
+    {
+      "main": [
+        "dist/echarts.js"
+      ]
     }
   }
 }
