--- a/bower.json
+++ b/bower.json
@@ -21,11 +21,9 @@
     "awesome-bootstrap-checkbox": "~0.3.7",
     "lodash": "^4.17.4",
     "ui-listView": "~0.0.8",
-    "ng-aa": "~0.3.0",
+    "ng-aa": "^0.3.0",
     "ng-csv": "~0.3.6",
     "angular-elastic": "~2.5.1",
-    "angular-dynamic-locale": "^0.1.32",
-    "angular-translate": "^2.13.1",
     "ngToast": "ngtoast#^2.0.0",
     "angular-animate": "^1.6.1",
     "font-awesome": "fontawesome#^4.7.0",
@@ -41,8 +39,7 @@
     "ng-focus-if": "^1.0.7",
     "ngInfiniteScroll": "^1.3.4",
     "moment": "^2.18.1",
-    "web-icons": "*",
-    "ng-material-floating-button": "ng-mfb#^0.6.2"
+    "web-icons": "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -93,16 +90,6 @@
         "jquery.nicescroll.js"
       ]
     },
-    "ng-scrollbars": {
-      "main": [
-        "src/scrollbars.js"
-      ]
-    },
-    "angular-echarts": {
-      "main": [
-        "dist/angular-echarts.js"
-      ]
-    },
     "socket.io-client": {
       "main": [
         "dist/socket.io.js"
@@ -112,6 +99,14 @@
       "main": [
         "dist/echarts.js"
       ]
+    },
+    "angular-echarts": {
+      "main": [
+        "dist/angular-echarts.js"
+      ]
     }
+  },
+  "resolutions": {
+    "angular": "^1.6.5"
   }
 }
