--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,7 @@
 {
   "name": "open311-web",
   "version": "0.1.0",
-  "dependencies":
-  {
+  "dependencies": {
     "angular": "^1.6.5",
     "angular-bootstrap": "^2.4.0",
     "angular-loading-bar": "~0.8.0",
@@ -14,9 +13,7 @@
     "themify-icons": "~0.1.2",
     "Ionicons": "ionicons#^2.0.1",
     "lato": "https://github.com/lykmapipo/lato.git#~0.3.1",
-    "angucomplete-alt": "~2.1.0",
     "bootstrap": "v4.0.0-alpha.4",
-    "jquery.nicescroll": "https://github.com/inuyaksa/jquery.nicescroll.git#master",
     "checklist-model": "^0.11.0",
     "angular-prompt": "^1.2.0",
     "awesome-bootstrap-checkbox": "~0.3.7",
@@ -40,79 +37,66 @@
     "moment": "^2.18.1",
     "web-icons": "*"
   },
-  "devDependencies":
-  {
+  "devDependencies": {
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
   "moduleName": "open311-web",
-  "overrides":
-  {
-    "bootstrap":
-    {
+  "overrides": {
+    "bootstrap": {
       "main": [
         "dist/css/bootstrap.css"
       ]
     },
-    "angular-bootstrap":
-    {
+    "angular-bootstrap": {
       "main": [
         "ui-bootstrap.js",
         "ui-bootstrap-tpls.js"
       ]
     },
-    "open-iconic":
-    {
+    "open-iconic": {
       "main": [
         "font/css/open-iconic-bootstrap.css"
       ]
     },
-    "font-awesome":
-    {
+    "font-awesome": {
       "main": [
         "css/font-awesome.css"
       ]
     },
-    "ng-csv":
-    {
+    "ng-csv": {
       "main": [
         "build/ng-csv.js"
       ]
     },
-    "ui-listView":
-    {
+    "ui-listView": {
       "main": [
         "dist/ui-listView.js",
         "dist/ui-listView.css"
       ]
     },
-    "jquery.nicescroll":
-    {
+    "jquery.nicescroll": {
       "main": [
         "jquery.nicescroll.js"
       ]
     },
-    "socket.io-client":
-    {
+    "socket.io-client": {
       "main": [
         "dist/socket.io.js"
       ]
     },
-    "echarts":
-    {
+    "echarts": {
       "main": [
         "dist/echarts.js"
       ]
     },
-    "angular-echarts":
-    {
+    "angular-echarts": {
       "main": [
         "dist/angular-echarts.js"
       ]
     }
   },
-  "resolutions":
-  {
+  "resolutions": {
     "angular": "^1.6.5"
   }
 }
