--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "socket.io-client": "^2.0.3",
     "ng-focus-if": "^1.0.7",
     "moment": "^2.18.1",
-    "web-icons": "*"
+    "web-icons": "*",
+    "angular-pickadate": "https://github.com/lykmapipo/angular-pickadate.git#^2.0.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
