--- a/.jshintrc
+++ b/.jshintrc
@@ -1,19 +1,21 @@
 {
-  "bitwise": true,
-  "browser": true,
-  "curly": true,
-  "eqeqeq": true,
-  "esnext": true,
-  "latedef": true,
-  "noarg": true,
-  "node": true,
-  "strict": true,
-  "undef": true,
-  "unused": true,
-  "globals": {
-    "angular": false,
-    "_": false,
-    "io": false,
-    "moment": false
-  }
+    "bitwise": true,
+    "browser": true,
+    "curly": true,
+    "eqeqeq": true,
+    "esnext": true,
+    "latedef": true,
+    "noarg": true,
+    "node": true,
+    "strict": true,
+    "undef": true,
+    "unused": true,
+    "globals":
+    {
+        "angular": false,
+        "_": false,
+        "io": false,
+        "moment": false,
+        "echarts": false
+    }
 }
