--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,10 @@
 {
   "name": "open311-web",
   "version": "0.1.0",
-  "dependencies": {
+  "appPath": "app",
+  "moduleName": "open311-web",
+  "dependencies":
+  {
     "angular": "^1.6.5",
     "angular-bootstrap": "^2.4.0",
     "angular-loading-bar": "~0.8.0",
@@ -18,7 +21,6 @@
     "angular-prompt": "^1.2.0",
     "awesome-bootstrap-checkbox": "~0.3.7",
     "lodash": "^4.17.4",
-    "ui-listView": "~0.0.8",
     "ng-aa": "^0.3.0",
     "ng-csv": "https://github.com/lykmapipo/ng-csv.git#^0.3.6",
     "angular-elastic": "~2.5.1",
@@ -37,61 +39,77 @@
     "web-icons": "*",
     "angular-pickadate": "https://github.com/lykmapipo/angular-pickadate.git#^2.1.2"
   },
-  "devDependencies": {
+  "devDependencies":
+  {
     "angular-mocks": "^1.4.0"
   },
-  "appPath": "app",
-  "moduleName": "open311-web",
-  "overrides": {
-    "bootstrap": {
+  "overrides":
+  {
+    "bootstrap":
+    {
       "main": [
         "dist/css/bootstrap.css"
       ]
     },
-    "angular-bootstrap": {
+    "angular-bootstrap":
+    {
       "main": [
         "ui-bootstrap.js",
         "ui-bootstrap-tpls.js"
       ]
     },
-    "open-iconic": {
+    "open-iconic":
+    {
       "main": [
         "font/css/open-iconic-bootstrap.css"
       ]
     },
-    "font-awesome": {
+    "font-awesome":
+    {
       "main": [
         "css/font-awesome.css"
       ]
     },
-    "ng-csv": {
+    "themify-icons":
+    {
+      "main": [
+        "css/themify-icons.css",
+        "fonts"
+      ]
+    },
+    "ng-csv":
+    {
       "main": [
         "build/ng-csv.js"
       ]
     },
-    "ui-listView": {
-      "main": [
-        "dist/ui-listView.js",
-        "dist/ui-listView.css"
-      ]
-    },
-    "jquery.nicescroll": {
-      "main": [
-        "jquery.nicescroll.js"
-      ]
-    },
-    "socket.io-client": {
+    "socket.io-client":
+    {
       "main": [
         "dist/socket.io.js"
       ]
     },
-    "echarts": {
+    "echarts":
+    {
       "main": [
         "dist/echarts.js"
       ]
+    },
+    "oi.select":
+    {
+      "main": [
+        "dist/select-tpls.js",
+        "dist/select.css"
+      ],
+      "dependencies":
+      {
+        "angular": ">=1.2",
+        "angular-sanitize": ">=1.2"
+      }
     }
   },
-  "resolutions": {
+  "resolutions":
+  {
     "angular": "^1.6.5",
     "angular-ui-router": "^0.4.0"
   }
