--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "angular-loading-bar": "~0.8.0",
     "angular-resource": "~1.4.9",
     "angular-sanitize": "~1.4.9",
-    "angular-ui-router": "^0.4.0",
+    "angular-ui-router": "0.4.2",
     "simple-line-icons": "~2.2.3",
     "ng-notify": "~0.8.0",
     "themify-icons": "~0.1.2",
@@ -21,7 +21,7 @@
     "angular-prompt": "^1.2.0",
     "awesome-bootstrap-checkbox": "~0.3.7",
     "lodash": "^4.17.4",
-    "ng-aa": "^0.3.0",
+    "ng-aa": "^0.3.1",
     "ng-csv": "https://github.com/lykmapipo/ng-csv.git#^0.3.6",
     "angular-elastic": "~2.5.1",
     "ngToast": "ngtoast#^2.0.0",
@@ -50,7 +50,8 @@
     {
       "main": [
         "dist/css/bootstrap.css"
-      ]
+      ],
+      "dependencies": []
     },
     "angular-bootstrap":
     {
