--- a/bower.json
+++ b/bower.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "appPath": "app",
   "moduleName": "open311-web",
-  "dependencies": {
-    "angular": "^1.6.5",
+  "dependencies":
+  {
+    "angular": "~1.6.6",
     "angular-bootstrap": "^2.4.0",
     "angular-loading-bar": "~0.8.0",
     "angular-resource": "~1.4.9",
     "angular-sanitize": "~1.4.9",
-    "angular-ui-router": "0.4.2",
+    "angular-ui-router": "~0.4.2",
     "simple-line-icons": "~2.2.3",
     "ng-notify": "~0.8.0",
     "themify-icons": "~0.1.2",
@@ -20,7 +21,7 @@
     "angular-prompt": "^1.2.0",
     "awesome-bootstrap-checkbox": "~0.3.7",
     "lodash": "^4.17.4",
-    "ng-aa": "^0.3.1",
+    "ng-aa": "0.3.3",
     "ng-csv": "https://github.com/lykmapipo/ng-csv.git#^0.3.6",
     "angular-elastic": "~2.5.1",
     "ngToast": "ngtoast#^2.0.0",
@@ -39,66 +40,74 @@
     "angular-pickadate": "https://github.com/lykmapipo/angular-pickadate.git#^2.1.2",
     "ui-leaflet": "^2.0.0"
   },
-  "devDependencies": {
+  "devDependencies":
+  {
     "angular-mocks": "^1.4.0"
   },
-  "overrides": {
-    "bootstrap": {
+  "overrides":
+  {
+    "bootstrap":
+    {
       "main": [
         "dist/css/bootstrap.css"
-      ]
+      ],
+      "dependencies": []
     },
-    "angular-bootstrap": {
+    "angular-bootstrap":
+    {
       "main": [
         "ui-bootstrap.js",
         "ui-bootstrap-tpls.js"
       ]
     },
-    "open-iconic": {
+    "open-iconic":
+    {
       "main": [
         "font/css/open-iconic-bootstrap.css"
       ]
     },
-    "font-awesome": {
+    "font-awesome":
+    {
       "main": [
         "css/font-awesome.css"
       ]
     },
-    "themify-icons": {
+    "themify-icons":
+    {
       "main": [
         "css/themify-icons.css",
         "fonts"
       ]
     },
-    "ng-csv": {
+    "ng-csv":
+    {
       "main": [
         "build/ng-csv.js"
       ]
     },
-    "socket.io-client": {
+    "socket.io-client":
+    {
       "main": [
         "dist/socket.io.js"
       ]
     },
-    "echarts": {
+    "echarts":
+    {
       "main": [
         "dist/echarts.js"
       ]
     },
-    "oi.select": {
+    "oi.select":
+    {
       "main": [
         "dist/select-tpls.js",
         "dist/select.css"
       ],
-      "dependencies": {
+      "dependencies":
+      {
         "angular": ">=1.2",
         "angular-sanitize": ">=1.2"
       }
     }
-  },
-  "resolutions": {
-    "angular": "^1.6.5",
-    "angular-ui-router": "^0.4.0",
-    "angular-bootstrap": "^2.4.0"
   }
 }
