--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
+    "lodash": "^4.17.10",
     "mocha": "^3.2.0",
     "phantomjs": "^2.1.7",
     "serve-static": "^1.11.2",
