Configuration : Allow formatting html using jsbeautify

--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,7 +1,9 @@
 {
-  "js": {
-    "jslint_happy": true,
-    "indent_size": 2,
-    "wrap_line_length": 80,
-  }
+  "jslint_happy": true,
+  "indent_size": 2,
+  "wrap_line_length": 80,
+  "indent_inner_html": true,
+  "indent_body_inner_html": true,
+  "indent_handlebars": true
+
 }
