--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "name": "lally elias",
     "email": "lallyelias87@gmail.com"
   },
-  "contributors": [{
-    "name": "lallyelias",
-    "email": "lallyelias87@gmail.com"
-  }, {
-    "name": "Benson Maruchu",
-    "email": "benmaruchu@gmail.com"
-  }],
+  "contributors": [
+    {
+      "name": "lallyelias",
+      "email": "lallyelias87@gmail.com"
+    },
+    {
+      "name": "Benson Maruchu",
+      "email": "benmaruchu@gmail.com"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/CodeTanzania/open311-web/"
