--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.1.0",
   "homepage": "https://github.com/CodeTanzania/open311-web/",
+  "scripts": {
+    "format": "prettier --write \"app/**/*.{html,css,js}\""
+  },
   "bugs": {
     "url": "https://github.com/CodeTanzania/open311-web/issues",
     "email": "lallyelias87@gmail.com"
@@ -59,6 +62,7 @@
     "grunt-template": "^1.0.0",
     "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^3.0.1",
+    "husky": "^2.3.0",
     "jit-grunt": "^0.10.0",
     "jshint-stylish": "^2.2.1",
     "karma": "^3.1.4",
@@ -69,11 +73,18 @@
     "lodash": "^4.17.11",
     "mocha": "^5.2.0",
     "phantomjs": "^2.1.7",
+    "prettier": "^1.17.1",
+    "pretty-quick": "^1.11.0",
     "serve-static": "^1.13.2",
     "time-grunt": "^2.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
