--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,8 @@
     "angular-pickadate": "https://github.com/lykmapipo/angular-pickadate.git#^2.1.2",
     "ui-leaflet": "^2.0.0",
     "angular-numeraljs": "^2.0.1",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "angular-pretty-bytes": "^1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
