--- a/package.json
+++ b/package.json
@@ -33,49 +33,51 @@
   "devDependencies": {
     "autoprefixer-core": "^6.0.1",
     "chai": "^4.2.0",
+    "extend": "^3.0.2",
     "grunt": "^1.0.4",
     "grunt-angular-localization": "^1.0.1",
     "grunt-angular-templates": "^1.1.0",
-    "grunt-concurrent": "^2.3.1",
+    "grunt-concurrent": "^3.0.0",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-htmlmin": "^3.0.0",
+    "grunt-contrib-htmlmin": "^3.1.0",
     "grunt-contrib-imagemin": "^3.1.0",
-    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-less": "^2.0.0",
-    "grunt-contrib-uglify": "^4.0.0",
+    "grunt-contrib-uglify": "^4.0.1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-filerev": "^2.3.1",
     "grunt-google-cdn": "^0.4.3",
     "grunt-jscs": "^3.0.1",
-    "grunt-karma": "^3.0.1",
+    "grunt-karma": "^3.0.2",
     "grunt-locales": "^7.1.0",
     "grunt-newer": "^1.3.0",
     "grunt-ng-annotate": "^3.0.0",
     "grunt-ng-constant": "^2.0.2",
     "grunt-postcss": "^0.9.0",
     "grunt-string-replace": "^1.3.1",
-    "grunt-svgmin": "^5.0.0",
+    "grunt-svgmin": "^6.0.0",
     "grunt-template": "^1.0.0",
     "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^3.0.1",
-    "husky": "^2.3.0",
+    "husky": "^3.0.1",
     "jit-grunt": "^0.10.0",
     "jshint-stylish": "^2.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.2.0",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
-    "lodash": "^4.17.11",
-    "mocha": "^6.0.0",
+    "lodash": "^4.17.15",
+    "lodash.template": "^4.5.0",
+    "mocha": "^6.2.0",
     "phantomjs": "^2.1.7",
-    "prettier": "^1.17.1",
-    "pretty-quick": "^1.11.0",
-    "serve-static": "^1.13.2",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
+    "serve-static": "^1.14.1",
     "time-grunt": "^2.0.0"
   },
   "engines": {
