--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "devDependencies": {
     "autoprefixer-core": "^6.0.1",
     "chai": "^4.2.0",
+    "clean-css": "^4.2.1",
+    "cryptiles": "^4.1.3",
     "extend": "^3.0.2",
     "grunt": "^1.0.4",
     "grunt-angular-localization": "^1.0.1",
@@ -78,12 +80,18 @@
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "serve-static": "^1.14.1",
-    "time-grunt": "^2.0.0"
+    "shell-quote": "^1.6.1",
+    "tar-fs": "^2.0.0",
+    "time-grunt": "^2.0.0",
+    "tunnel-agent": "^0.6.0"
   },
   "engines": {
     "node": ">=0.10.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "handlebars": "^4.1.2",
+    "hoek": "^6.1.3"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
