--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "licence": "MIT",
   "devDependencies": {
     "autoprefixer-core": "^6.0.1",
+    "bower": "^1.8.8",
     "chai": "^4.2.0",
     "clean-css": "^4.2.1",
     "cryptiles": "^4.1.3",
