--- a/resources/development.config.json
+++ b/resources/development.config.json
@@ -1,33 +1,29 @@
 {
   "name": "development",
-  "owner": "DAWASA",
-  "author": "DAWASA",
-  "title": "DAWASA",
+  "owner": "Jipime",
+  "author": "Jipime",
+  "title": "Jipime",
   "version": "v0.1.0",
-  "description": "Citizen Feedback System",
-  "apiEndPoint":
-  {
+  "description": "Jilinde. Jitambue",
+  "apiEndPoint": {
     "web": "http://127.0.0.1:5000",
     "mobile": "http://127.0.0.1:5000"
   },
-  "socketEndPoint":
-  {
+  "socketEndPoint": {
     "web": "",
     "mobile": ""
   },
   "socketEnable": false,
-  "settings":
-  {
+  "settings": {
     "locale": "sw",
-    "name": "DAWASA",
+    "name": "Jipime",
     "email": "lallyelias87@gmail.com",
     "phone": "(000) 000 000 000",
     "currency": "TZS",
     "dateFormat": "dd/MM/yyyy",
     "timeFormat": "hh:mm:ss",
     "defaultPassword": "guest",
-    "abbreviations":
-    {
+    "abbreviations": {
       "thousand": "K",
       "million": "M",
       "billion": "B",
